# simple-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: unit-test.yml
docker/: Dockerfile
docs/source/: conf.py  index.rst
ghdemo/: README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
ghdemo/ghdemo/: cli.py  data.py  model.py
ghdemo/tests/: test_model.py
