[metadata]
name = ghdemo
version = 0.1.0
description = Example module for GitHub demo
long_description = file: README.md
long_description_content_type = text/markdown
author = vgarzon8
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ghdemo = ghdemo.cli:main
